overflow correction

--- a/style.css
+++ b/style.css
@@ -166,7 +166,6 @@ div { position: absolute; box-sizing: border-box;}
 	left: 3px;
 	width: 546px;
 	height: 97px;
-	overflow: hidden;
 	font-family: Redressed;
 	font-size: 18px;
 	text-align: left;
@@ -180,7 +179,6 @@ div { position: absolute; box-sizing: border-box;}
 	left: 0px;
 	width: 769px;
 	height: 97px;
-	overflow: hidden;
 	font-family: Redressed;
 	font-size: 18px;
 	text-align: left;
@@ -193,7 +191,6 @@ div { position: absolute; box-sizing: border-box;}
 	left: 0px;
 	width: 641px;
 	height: 97px;
-	overflow: hidden;
 	font-family: Redressed;
 	font-size: 18px;
 	text-align: left;
